# aspeed-rust

./: .gitignore  BUILD.bazel  Cargo.toml  slee@sleepi4.local
docs/: i2c-core-hubris-integration-design.md
src/: astdebug.rs  common.rs  hash_owned.rs  i2cmonitor.rs  lib.rs  main.rs  pinctrl.rs  rsa.rs  spimonitor.rs
src/i2c/: ast1060_i2c.rs
src/i2c_core/: constants.rs  controller.rs  global.rs  hal_impl.rs  master.rs  mod.rs  recovery.rs  slave.rs  timing.rs  transfer.rs  types.rs
src/i3c/: ast1060_i3c.rs  ccc.rs  config.rs  constants.rs  controller.rs  error.rs  hal_impl.rs  hardware.rs  i3c_config.rs  i3c_controller.rs  ibi.rs  ibi_workq.rs  mod.rs  types.rs
src/rx-tx-test/: i2c_master_dma.rs  i2c_slave_dma.rs
src/spi/: device.rs  fmccontroller.rs  mod.rs  norflash.rs  norflashblockdevice.rs  spicontroller.rs  spidmairqtest.rs  spitest.rs
src/tests/functional/: hash_test.rs  hmac_test.rs  i2c_master_slave_test.rs  i2c_test.rs  i2cmonitor_test.rs  i3c_test.rs  mod.rs  otp_test.rs  timer_test.rs
src/uart_core/: controller.rs  hal_impl.rs  mod.rs
tests-hw/: Cargo.toml  build.rs
tests-hw/src/: ecdsa_test.rs  gpio_test.rs  hash_test.rs  hmac_test.rs  i2c_core_test.rs  i2c_master_slave_test.rs  i2c_test.rs  i3c_test.rs  main.rs  rsa_test.rs  spim_test.rs  timer_test.rs
xtask/src/: test.rs
