# Licensed under the Apache-2.0 license

[workspace]
members = ["xtask"]
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.83.0"

[package]
name = "aspeed-ddk"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = []
isr-handlers = []  # Export ISR handlers with #[no_mangle] - disable for kernel integration
i2c_master = []
i2c_target = []
i3c_master = []
i3c_target = []
test-rsa = []
test-ecdsa = []
test-hmac = []
test-hash = []
spi_dma = []
spi_dma_write = []
spi_dma_irq = []
spi_monitor = []

[dependencies]
ast1060-pac = { git = "https://github.com/OpenPRoT/ast1060-pac.git", branch = "main", features = ["rt"] }
bitflags = "2.6"
embedded-hal = { version = "1.0.0" }
embedded-hal-old = { git = "https://github.com/rust-embedded/embedded-hal.git", rev = "599d44fdc7e709cb9ae6580ec11c0b7f7f102", package = "embedded-hal" }
embedded-io = "0.6.1"
fugit = "0.3.7"
proposed-traits = { git = "https://github.com/rusty1968/proposed_traits.git", package = "proposed-traits", rev = "85641310df5a5276c67f81621b104322cff0286c" }
hex-literal = "0.4"
heapless = "0.8.0"
nb = "1.1.0"
paste = "1.0"
static_cell = "2"
openprot-hal-blocking = { git="https://github.com/OpenPRoT/openprot" }
zerocopy = { version = "0.8.25", features = ["derive"] }
critical-section = "1.2"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["device"] }
panic-halt = "1.0.0"

